[882] Add jacoco analysis
Bug: 882 

Change-Id: Ieb0ad0fd0bcb5187ed1bee1a82c754b6522f728d
Signed-off-by: Thomas Guiu <thomas.guiu@soyatec.com>