@@ -34,6 +34,12 @@ This file was generated by Eclipse EGF
     <condition property="rcptt.url" value="${env.rcptt.url}">
         <isset property="env.rcptt.url" />
     </condition>
+    <condition property="jacoco.url" value="${env.jacoco.url}">
+        <isset property="env.jacoco.url" />
+    </condition>
+    <condition property="example.url" value="${env.example.url}">
+        <isset property="env.example.url" />
+    </condition>
     <condition property="kitalpha_version" value="${env.kitalpha_version}">
         <isset property="env.kitalpha_version" />
     </condition>
@@ -108,6 +114,8 @@ This file was generated by Eclipse EGF
 	                <jvmarg value="-Dtimestamp=${timestamp}"/>
 	                <jvmarg value="-Dsdk.url=${sdk.url}"/>
 	                <jvmarg value="-Drcptt.url=${rcptt.url}"/>
+	                <jvmarg value="-Djacoco.url=${jacoco.url}"/>
+	                <jvmarg value="-Dexample.url=${example.url}"/>
 	                <jvmarg value="-Dkitalpha_version=${kitalpha_version}"/>
 	                <jvmarg value="-Daut-path=${aut-path}"/>
 	                <jvmarg value="-Dtest-results=${test-results}"/>
@@ -289,6 +297,8 @@ This file was generated by Eclipse EGF
 		<echo message="Builtin $${timestamp} : ${timestamp}" />
 		<echo message="Provided $${sdk.url} : ${sdk.url}" />
 		<echo message="Provided $${rcptt.url} : ${rcptt.url}" />
+		<echo message="Provided $${jacoco.url} : ${jacoco.url}" />
+		<echo message="Provided $${example.url} : ${example.url}" />
 		<echo message="Provided $${kitalpha_version} : ${kitalpha_version}" />
 		<echo message="Provided $${aut-path} : ${aut-path}" />
 		<echo message="Provided $${test-results} : ${test-results}" />
@@ -321,11 +331,85 @@ This file was generated by Eclipse EGF
         </echoproperties>
     </target>
 	
-	<target name="all" depends="CleanStep_1,Install_RCPTT,download_TP,import_tests_projects,Resource_Reuse" />
+	<target name="all" depends="CleanStep_1,Install_RCPTT,download_TP,install_jacoco,install_componant_sample,resourcereuse,emde_build,import_tests_projects,Resource_Reuse,emde" />
 	<target name="import_tests_projects" depends="import_tests_projects_BuildStep_1" />
 	<target name="CleanStep_1" >
 		<antcall target="clean.result" />
 	</target>
+    <target name="resourcereuse" depends="init,install.buckminster">
+        <echo message="Importing projects into workspace ${workspace} and binaries into target platform" />
+
+		<echo message="install JRE ${env.JAVA_HOME}" />
+    	<buckminster command="installJRE">
+            <cmdargs>
+                <arg value="--location" />
+                <arg value="${env.JAVA_HOME}" />
+            </cmdargs>
+        </buckminster>
+
+
+		<echo message="import target platform" />
+        <buckminster command="importtargetdefinition">
+            <cmdargs>
+                <arg value="--active" />
+                <arg value="${relengDir}/buckminster_resourcereuse/build.target" />
+            </cmdargs>
+        </buckminster>
+		<echo message="provision : import projects in workspace" />
+        <buckminster command="import">
+            <!-- Uncomment to debug <globargs><jvmarg value="-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"/></globargs> -->
+            <cmdargs>
+                <arg value="${relengDir}/buckminster_resourcereuse/build.mspec" />
+            </cmdargs>
+        </buckminster>
+
+
+        <echo message="Invoking all eclipse builders on workspace ${workspace}" />
+        <buckminster command="build" >
+            <cmdargs>
+                <arg value="--clean" />
+                <arg value="--thorough" />
+            </cmdargs>
+		</buckminster>
+    </target>
+
+    <target name="emde_build" depends="init,install.buckminster">
+        <echo message="Importing projects into workspace ${workspace} and binaries into target platform" />
+
+		<echo message="install JRE ${env.JAVA_HOME}" />
+    	<buckminster command="installJRE">
+            <cmdargs>
+                <arg value="--location" />
+                <arg value="${env.JAVA_HOME}" />
+            </cmdargs>
+        </buckminster>
+
+
+		<echo message="import target platform" />
+        <buckminster command="importtargetdefinition">
+            <cmdargs>
+                <arg value="--active" />
+                <arg value="${relengDir}/buckminster_emde_build/build.target" />
+            </cmdargs>
+        </buckminster>
+		<echo message="provision : import projects in workspace" />
+        <buckminster command="import">
+            <!-- Uncomment to debug <globargs><jvmarg value="-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"/></globargs> -->
+            <cmdargs>
+                <arg value="${relengDir}/buckminster_emde_build/build.mspec" />
+            </cmdargs>
+        </buckminster>
+
+
+        <echo message="Invoking all eclipse builders on workspace ${workspace}" />
+        <buckminster command="build" >
+            <cmdargs>
+                <arg value="--clean" />
+                <arg value="--thorough" />
+            </cmdargs>
+		</buckminster>
+    </target>
+
     <target name="import_tests_projects_BuildStep_1" depends="init,install.buckminster">
         <echo message="Importing projects into workspace ${workspace} and binaries into target platform" />
 
@@ -371,6 +455,20 @@ This file was generated by Eclipse EGF
           <arg value="org.polarsys.kitalpha.resourcereuse.tests/Resource_Reuse_Tests.launch" />
           <arg value="-o" />
           <arg value="${result}/testReportResource_Reuse.xml" />
+          <arg value="--terseXML" />
+          <arg value="--flatXML"/>
+        </cmdargs>
+      </buckminster>
+	</target>
+
+	<target name="emde" depends="init,install.buckminster">
+	  <echo message="Running Junit tests " />
+      <buckminster command="junit">
+        <cmdargs>
+          <arg value="-l" />
+          <arg value="org.polarsys.kitalpha.emde.tests/eMDE_Tests.launch" />
+          <arg value="-o" />
+          <arg value="${result}/testReportemde.xml" />
           <arg value="--terseXML" />
           <arg value="--flatXML"/>
         </cmdargs>
@@ -423,4 +521,54 @@ This file was generated by Eclipse EGF
 </target> 
 
 
+
+	<target name="install_jacoco">
+		<antcall target="install.jacoco"/>
+	</target>
+
+<target name="install.jacoco">
+	<available file="${tools}/jacoco" property="jacoco.exists" />
+	<antcall target="do.install.jacoco" />
+</target>
+
+<target name="do.install.jacoco" unless="jacoco.exists">
+
+	<echo message="Fetching jacoco library" />
+	<tempfile destdir="${java.io.tmpdir}" prefix="jacoco-" suffix=".zip" property="jacoco.zip" deleteonexit="true" />
+	<get src="${jacoco.url}" dest="${jacoco.zip}" />
+	<mkdir dir="${tools}" />
+	<unzip src="${jacoco.zip}" dest="${tools}/jacoco" />
+	<delete file="${jacoco.zip}" />
+</target>
+
+	<target name="install_componant_sample" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+                <arg value="-r" />
+                <arg value="${example.url}" />
+
+
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.vp.componentsample.example.feature.feature.group" />                
+
+
+
+            </args>
+        </eclipse.launch>
+	</target>	
 </project>
